# spacedrep

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  wsgi.py
instance/: vocabulary.sqlite
spacedrep_vocabulary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vocab_app/: __init__.py  models.py  routes.py  services.py
vocab_app/static/: app.css
vocab_app/templates/: base.html  dashboard.html
vocab_app/templates/admin/: data_management.html
vocab_app/templates/advance/: confirm.html  done.html
vocab_app/templates/auth/: login.html  profile.html  register.html
vocab_app/templates/history/: detail.html  list.html
vocab_app/templates/study/: question.html  result.html  start.html
vocab_app/templates/vocabulary/: bulk_import.html  detail.html  form.html  list.html
