[project]
name = "spacedrep-vocabulary"
version = "0.1.0"
description = "A Flask vocabulary learning application with learning and spaced review phases."
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0",
    "Flask-Login>=0.6",
    "Flask-SQLAlchemy>=3.1",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

